ex08/testdir/y.output
Terminals unused in grammar

   RETURN
   VOID


Grammar

    0 $accept: program $end

    1 program: declPart stmtList

    2 declPart: /* empty */
    3         | declPart decl

    4 @1: /* empty */

    5 decl: type ID @1 vinit ';'
    6     | type ID '[' INUM ']' ';'

    7 vinit: /* empty */
    8      | '=' iconst
    9      | '=' rconst

   10 iconst: INUM
   11       | ADDOP INUM

   12 rconst: RNUM
   13       | ADDOP RNUM

   14 type: INT
   15     | REAL

   16 stmtList: /* empty */
   17         | stmtList stmt

   18 $@2: /* empty */

   19 stmt: vname '=' $@2 expr ';'

   20 $@3: /* empty */

   21 $@4: /* empty */

   22 stmt: vname '[' $@3 expr ']' $@4 '=' expr ';'
   23     | ifPart elsePart
   24     | WHILE '(' cond ')' '{' stmtList '}'

   25 $@5: /* empty */

   26 stmt: REPEAT '(' expr ')' $@5 '{' stmtList '}'

   27 ifPart: IF '(' cond ')' '{' stmtList '}'
   28       | ifPart ELSIF '(' cond ')' '{' stmtList '}'

   29 elsePart: /* empty */
   30         | ELSE '{' stmtList '}'

   31 expr: expr ADDOP expr
   32     | expr MULOP expr
   33     | ADDOP expr
   34     | '(' expr ')'
   35     | vname

   36 $@6: /* empty */

   37 expr: vname '[' $@6 expr ']'
   38     | INUM
   39     | RNUM

   40 vname: ID

   41 cond: cond LOGOP cond
   42     | ULOGOP cond
   43     | expr RELOP expr
   44     | '(' cond ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 24 26 27 28 34 44
')' (41) 24 26 27 28 34 44
';' (59) 5 6 19 22
'=' (61) 8 9 19 22
'[' (91) 6 22 37
']' (93) 6 22 37
'{' (123) 24 26 27 28 30
'}' (125) 24 26 27 28 30
error (256)
ID (258) 5 6 40
INUM (259) 6 10 11 38
RNUM (260) 12 13 39
ADDOP (261) 11 13 31 33
MULOP (262) 32
RELOP (263) 43
LOGOP (264) 41
ULOGOP (265) 42
SIGNOP (266)
IF (267) 27
ELSIF (268) 28
ELSE (269) 30
WHILE (270) 24
REPEAT (271) 26
RETURN (272)
VOID (273)
INT (274) 14
REAL (275) 15


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
program (30)
    on left: 1, on right: 0
declPart (31)
    on left: 2 3, on right: 1 3
decl (32)
    on left: 5 6, on right: 3
@1 (33)
    on left: 4, on right: 5
vinit (34)
    on left: 7 8 9, on right: 5
iconst (35)
    on left: 10 11, on right: 8
rconst (36)
    on left: 12 13, on right: 9
type (37)
    on left: 14 15, on right: 5 6
stmtList (38)
    on left: 16 17, on right: 1 17 24 26 27 28 30
stmt (39)
    on left: 19 22 23 24 26, on right: 17
$@2 (40)
    on left: 18, on right: 19
$@3 (41)
    on left: 20, on right: 22
$@4 (42)
    on left: 21, on right: 22
$@5 (43)
    on left: 25, on right: 26
ifPart (44)
    on left: 27 28, on right: 23 28
elsePart (45)
    on left: 29 30, on right: 23
expr (46)
    on left: 31 32 33 34 35 37 38 39, on right: 19 22 26 31 32 33 34
    37 43
$@6 (47)
    on left: 36, on right: 37
vname (48)
    on left: 40, on right: 19 22 35 37
cond (49)
    on left: 41 42 43 44, on right: 24 27 28 41 42 44


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (declPart)

    program   go to state 1
    declPart  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: declPart . stmtList
    3 declPart: declPart . decl

    INT   shift, and go to state 4
    REAL  shift, and go to state 5

    $default  reduce using rule 16 (stmtList)

    decl      go to state 6
    type      go to state 7
    stmtList  go to state 8


state 3

    0 $accept: program $end .

    $default  accept


state 4

   14 type: INT .

    $default  reduce using rule 14 (type)


state 5

   15 type: REAL .

    $default  reduce using rule 15 (type)


state 6

    3 declPart: declPart decl .

    $default  reduce using rule 3 (declPart)


state 7

    5 decl: type . ID @1 vinit ';'
    6     | type . ID '[' INUM ']' ';'

    ID  shift, and go to state 9


state 8

    1 program: declPart stmtList .
   17 stmtList: stmtList . stmt

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13

    $default  reduce using rule 1 (program)

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 9

    5 decl: type ID . @1 vinit ';'
    6     | type ID . '[' INUM ']' ';'

    '['  shift, and go to state 17

    $default  reduce using rule 4 (@1)

    @1  go to state 18


state 10

   40 vname: ID .

    $default  reduce using rule 40 (vname)


state 11

   27 ifPart: IF . '(' cond ')' '{' stmtList '}'

    '('  shift, and go to state 19


state 12

   24 stmt: WHILE . '(' cond ')' '{' stmtList '}'

    '('  shift, and go to state 20


state 13

   26 stmt: REPEAT . '(' expr ')' $@5 '{' stmtList '}'

    '('  shift, and go to state 21


state 14

   17 stmtList: stmtList stmt .

    $default  reduce using rule 17 (stmtList)


state 15

   23 stmt: ifPart . elsePart
   28 ifPart: ifPart . ELSIF '(' cond ')' '{' stmtList '}'

    ELSIF  shift, and go to state 22
    ELSE   shift, and go to state 23

    $default  reduce using rule 29 (elsePart)

    elsePart  go to state 24


state 16

   19 stmt: vname . '=' $@2 expr ';'
   22     | vname . '[' $@3 expr ']' $@4 '=' expr ';'

    '['  shift, and go to state 25
    '='  shift, and go to state 26


state 17

    6 decl: type ID '[' . INUM ']' ';'

    INUM  shift, and go to state 27


state 18

    5 decl: type ID @1 . vinit ';'

    '='  shift, and go to state 28

    $default  reduce using rule 7 (vinit)

    vinit  go to state 29


state 19

   27 ifPart: IF '(' . cond ')' '{' stmtList '}'

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 35
    vname  go to state 36
    cond   go to state 37


state 20

   24 stmt: WHILE '(' . cond ')' '{' stmtList '}'

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 35
    vname  go to state 36
    cond   go to state 38


state 21

   26 stmt: REPEAT '(' . expr ')' $@5 '{' stmtList '}'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 40
    vname  go to state 36


state 22

   28 ifPart: ifPart ELSIF . '(' cond ')' '{' stmtList '}'

    '('  shift, and go to state 41


state 23

   30 elsePart: ELSE . '{' stmtList '}'

    '{'  shift, and go to state 42


state 24

   23 stmt: ifPart elsePart .

    $default  reduce using rule 23 (stmt)


state 25

   22 stmt: vname '[' . $@3 expr ']' $@4 '=' expr ';'

    $default  reduce using rule 20 ($@3)

    $@3  go to state 43


state 26

   19 stmt: vname '=' . $@2 expr ';'

    $default  reduce using rule 18 ($@2)

    $@2  go to state 44


state 27

    6 decl: type ID '[' INUM . ']' ';'

    ']'  shift, and go to state 45


state 28

    8 vinit: '=' . iconst
    9      | '=' . rconst

    INUM   shift, and go to state 46
    RNUM   shift, and go to state 47
    ADDOP  shift, and go to state 48

    iconst  go to state 49
    rconst  go to state 50


state 29

    5 decl: type ID @1 vinit . ';'

    ';'  shift, and go to state 51


state 30

   38 expr: INUM .

    $default  reduce using rule 38 (expr)


state 31

   39 expr: RNUM .

    $default  reduce using rule 39 (expr)


state 32

   33 expr: ADDOP . expr

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 52
    vname  go to state 36


state 33

   42 cond: ULOGOP . cond

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 35
    vname  go to state 36
    cond   go to state 53


state 34

   34 expr: '(' . expr ')'
   44 cond: '(' . cond ')'

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 54
    vname  go to state 36
    cond   go to state 55


state 35

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   43 cond: expr . RELOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    RELOP  shift, and go to state 58


state 36

   35 expr: vname .
   37     | vname . '[' $@6 expr ']'

    '['  shift, and go to state 59

    $default  reduce using rule 35 (expr)


state 37

   27 ifPart: IF '(' cond . ')' '{' stmtList '}'
   41 cond: cond . LOGOP cond

    LOGOP  shift, and go to state 60
    ')'    shift, and go to state 61


state 38

   24 stmt: WHILE '(' cond . ')' '{' stmtList '}'
   41 cond: cond . LOGOP cond

    LOGOP  shift, and go to state 60
    ')'    shift, and go to state 62


state 39

   34 expr: '(' . expr ')'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 63
    vname  go to state 36


state 40

   26 stmt: REPEAT '(' expr . ')' $@5 '{' stmtList '}'
   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ')'    shift, and go to state 64


state 41

   28 ifPart: ifPart ELSIF '(' . cond ')' '{' stmtList '}'

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 35
    vname  go to state 36
    cond   go to state 65


state 42

   30 elsePart: ELSE '{' . stmtList '}'

    $default  reduce using rule 16 (stmtList)

    stmtList  go to state 66


state 43

   22 stmt: vname '[' $@3 . expr ']' $@4 '=' expr ';'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 67
    vname  go to state 36


state 44

   19 stmt: vname '=' $@2 . expr ';'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 68
    vname  go to state 36


state 45

    6 decl: type ID '[' INUM ']' . ';'

    ';'  shift, and go to state 69


state 46

   10 iconst: INUM .

    $default  reduce using rule 10 (iconst)


state 47

   12 rconst: RNUM .

    $default  reduce using rule 12 (rconst)


state 48

   11 iconst: ADDOP . INUM
   13 rconst: ADDOP . RNUM

    INUM  shift, and go to state 70
    RNUM  shift, and go to state 71


state 49

    8 vinit: '=' iconst .

    $default  reduce using rule 8 (vinit)


state 50

    9 vinit: '=' rconst .

    $default  reduce using rule 9 (vinit)


state 51

    5 decl: type ID @1 vinit ';' .

    $default  reduce using rule 5 (decl)


state 52

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   33     | ADDOP expr .

    $default  reduce using rule 33 (expr)


state 53

   41 cond: cond . LOGOP cond
   42     | ULOGOP cond .

    $default  reduce using rule 42 (cond)


state 54

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   34     | '(' expr . ')'
   43 cond: expr . RELOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    RELOP  shift, and go to state 58
    ')'    shift, and go to state 72


state 55

   41 cond: cond . LOGOP cond
   44     | '(' cond . ')'

    LOGOP  shift, and go to state 60
    ')'    shift, and go to state 73


state 56

   31 expr: expr ADDOP . expr

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 74
    vname  go to state 36


state 57

   32 expr: expr MULOP . expr

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 75
    vname  go to state 36


state 58

   43 cond: expr RELOP . expr

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 76
    vname  go to state 36


state 59

   37 expr: vname '[' . $@6 expr ']'

    $default  reduce using rule 36 ($@6)

    $@6  go to state 77


state 60

   41 cond: cond LOGOP . cond

    ID      shift, and go to state 10
    INUM    shift, and go to state 30
    RNUM    shift, and go to state 31
    ADDOP   shift, and go to state 32
    ULOGOP  shift, and go to state 33
    '('     shift, and go to state 34

    expr   go to state 35
    vname  go to state 36
    cond   go to state 78


state 61

   27 ifPart: IF '(' cond ')' . '{' stmtList '}'

    '{'  shift, and go to state 79


state 62

   24 stmt: WHILE '(' cond ')' . '{' stmtList '}'

    '{'  shift, and go to state 80


state 63

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   34     | '(' expr . ')'

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ')'    shift, and go to state 72


state 64

   26 stmt: REPEAT '(' expr ')' . $@5 '{' stmtList '}'

    $default  reduce using rule 25 ($@5)

    $@5  go to state 81


state 65

   28 ifPart: ifPart ELSIF '(' cond . ')' '{' stmtList '}'
   41 cond: cond . LOGOP cond

    LOGOP  shift, and go to state 60
    ')'    shift, and go to state 82


state 66

   17 stmtList: stmtList . stmt
   30 elsePart: ELSE '{' stmtList . '}'

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13
    '}'     shift, and go to state 83

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 67

   22 stmt: vname '[' $@3 expr . ']' $@4 '=' expr ';'
   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ']'    shift, and go to state 84


state 68

   19 stmt: vname '=' $@2 expr . ';'
   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ';'    shift, and go to state 85


state 69

    6 decl: type ID '[' INUM ']' ';' .

    $default  reduce using rule 6 (decl)


state 70

   11 iconst: ADDOP INUM .

    $default  reduce using rule 11 (iconst)


state 71

   13 rconst: ADDOP RNUM .

    $default  reduce using rule 13 (rconst)


state 72

   34 expr: '(' expr ')' .

    $default  reduce using rule 34 (expr)


state 73

   44 cond: '(' cond ')' .

    $default  reduce using rule 44 (cond)


state 74

   31 expr: expr . ADDOP expr
   31     | expr ADDOP expr .
   32     | expr . MULOP expr

    MULOP  shift, and go to state 57

    $default  reduce using rule 31 (expr)


state 75

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   32     | expr MULOP expr .

    $default  reduce using rule 32 (expr)


state 76

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   43 cond: expr RELOP expr .

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57

    $default  reduce using rule 43 (cond)


state 77

   37 expr: vname '[' $@6 . expr ']'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 86
    vname  go to state 36


state 78

   41 cond: cond . LOGOP cond
   41     | cond LOGOP cond .

    $default  reduce using rule 41 (cond)


state 79

   27 ifPart: IF '(' cond ')' '{' . stmtList '}'

    $default  reduce using rule 16 (stmtList)

    stmtList  go to state 87


state 80

   24 stmt: WHILE '(' cond ')' '{' . stmtList '}'

    $default  reduce using rule 16 (stmtList)

    stmtList  go to state 88


state 81

   26 stmt: REPEAT '(' expr ')' $@5 . '{' stmtList '}'

    '{'  shift, and go to state 89


state 82

   28 ifPart: ifPart ELSIF '(' cond ')' . '{' stmtList '}'

    '{'  shift, and go to state 90


state 83

   30 elsePart: ELSE '{' stmtList '}' .

    $default  reduce using rule 30 (elsePart)


state 84

   22 stmt: vname '[' $@3 expr ']' . $@4 '=' expr ';'

    $default  reduce using rule 21 ($@4)

    $@4  go to state 91


state 85

   19 stmt: vname '=' $@2 expr ';' .

    $default  reduce using rule 19 (stmt)


state 86

   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr
   37     | vname '[' $@6 expr . ']'

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ']'    shift, and go to state 92


state 87

   17 stmtList: stmtList . stmt
   27 ifPart: IF '(' cond ')' '{' stmtList . '}'

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13
    '}'     shift, and go to state 93

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 88

   17 stmtList: stmtList . stmt
   24 stmt: WHILE '(' cond ')' '{' stmtList . '}'

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13
    '}'     shift, and go to state 94

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 89

   26 stmt: REPEAT '(' expr ')' $@5 '{' . stmtList '}'

    $default  reduce using rule 16 (stmtList)

    stmtList  go to state 95


state 90

   28 ifPart: ifPart ELSIF '(' cond ')' '{' . stmtList '}'

    $default  reduce using rule 16 (stmtList)

    stmtList  go to state 96


state 91

   22 stmt: vname '[' $@3 expr ']' $@4 . '=' expr ';'

    '='  shift, and go to state 97


state 92

   37 expr: vname '[' $@6 expr ']' .

    $default  reduce using rule 37 (expr)


state 93

   27 ifPart: IF '(' cond ')' '{' stmtList '}' .

    $default  reduce using rule 27 (ifPart)


state 94

   24 stmt: WHILE '(' cond ')' '{' stmtList '}' .

    $default  reduce using rule 24 (stmt)


state 95

   17 stmtList: stmtList . stmt
   26 stmt: REPEAT '(' expr ')' $@5 '{' stmtList . '}'

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13
    '}'     shift, and go to state 98

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 96

   17 stmtList: stmtList . stmt
   28 ifPart: ifPart ELSIF '(' cond ')' '{' stmtList . '}'

    ID      shift, and go to state 10
    IF      shift, and go to state 11
    WHILE   shift, and go to state 12
    REPEAT  shift, and go to state 13
    '}'     shift, and go to state 99

    stmt    go to state 14
    ifPart  go to state 15
    vname   go to state 16


state 97

   22 stmt: vname '[' $@3 expr ']' $@4 '=' . expr ';'

    ID     shift, and go to state 10
    INUM   shift, and go to state 30
    RNUM   shift, and go to state 31
    ADDOP  shift, and go to state 32
    '('    shift, and go to state 39

    expr   go to state 100
    vname  go to state 36


state 98

   26 stmt: REPEAT '(' expr ')' $@5 '{' stmtList '}' .

    $default  reduce using rule 26 (stmt)


state 99

   28 ifPart: ifPart ELSIF '(' cond ')' '{' stmtList '}' .

    $default  reduce using rule 28 (ifPart)


state 100

   22 stmt: vname '[' $@3 expr ']' $@4 '=' expr . ';'
   31 expr: expr . ADDOP expr
   32     | expr . MULOP expr

    ADDOP  shift, and go to state 56
    MULOP  shift, and go to state 57
    ';'    shift, and go to state 101


state 101

   22 stmt: vname '[' $@3 expr ']' $@4 '=' expr ';' .

    $default  reduce using rule 22 (stmt)
